/*
 * This file is part of Bisq.
 *
 * Bisq is free software: you can redistribute it and/or modify it
 * under the terms of the GNU Affero General Public License as published by
 * the Free Software Foundation, either version 3 of the License, or (at
 * your option) any later version.
 *
 * Bisq is distributed in the hope that it will be useful, but WITHOUT
 * ANY WARRANTY; without even the implied warranty of MERCHANTABILITY or
 * FITNESS FOR A PARTICULAR PURPOSE. See the GNU Affero General Public
 * License for more details.
 *
 * You should have received a copy of the GNU Affero General Public License
 * along with Bisq. If not, see <http://www.gnu.org/licenses/>.
 */

syntax = "proto3";
package io.bisq.protobuffer;

// FIXME: IntelliJ does not recognize the import but the compiler does
import "pb.proto";

option java_package = "bisq.grpc.protobuf";
option java_multiple_files = true;

///////////////////////////////////////////////////////////////////////////////////////////
// Version
///////////////////////////////////////////////////////////////////////////////////////////

service GetVersion {
    rpc GetVersion (GetVersionRequest) returns (GetVersionReply) {
    }
}

message GetVersionRequest {
}

message GetVersionReply {
    string version = 1;
}

///////////////////////////////////////////////////////////////////////////////////////////
// Balance
///////////////////////////////////////////////////////////////////////////////////////////

service GetBalance {
    rpc GetBalance (GetBalanceRequest) returns (GetBalanceReply) {
    }
}

message GetBalanceRequest {
}

message GetBalanceReply {
    uint64 balance = 1;
}

///////////////////////////////////////////////////////////////////////////////////////////
// TradeStatistics
///////////////////////////////////////////////////////////////////////////////////////////

service GetTradeStatistics {
    rpc GetTradeStatistics (GetTradeStatisticsRequest) returns (GetTradeStatisticsReply) {
    }
}

message GetTradeStatisticsRequest {
}

// FIXME: IntelliJ does not recognize the imported TradeStatistics2 but the compiler does
message GetTradeStatisticsReply {
    repeated TradeStatistics2 TradeStatistics = 1;
}

///////////////////////////////////////////////////////////////////////////////////////////
// Offer
///////////////////////////////////////////////////////////////////////////////////////////

service GetOffers {
    rpc GetOffers (GetOffersRequest) returns (GetOffersReply) {
    }
}

message GetOffersRequest {
}

// FIXME: IntelliJ does not recognize the imported Offer but the compiler does
message GetOffersReply {
    repeated Offer offers = 1;
}

///////////////////////////////////////////////////////////////////////////////////////////
// PaymentAccount
///////////////////////////////////////////////////////////////////////////////////////////

service GetPaymentAccounts {
    rpc GetPaymentAccounts (GetPaymentAccountsRequest) returns (GetPaymentAccountsReply) {
    }
}

message GetPaymentAccountsRequest {
}

// FIXME: IntelliJ does not recognize the imported PaymentAccount but the compiler does
message GetPaymentAccountsReply {
    repeated PaymentAccount paymentAccounts = 1;
}

///////////////////////////////////////////////////////////////////////////////////////////
// PlaceOffer
///////////////////////////////////////////////////////////////////////////////////////////

service PlaceOffer {
    rpc PlaceOffer (PlaceOfferRequest) returns (PlaceOfferReply) {
    }
}

message PlaceOfferRequest {
    string currencyCode = 1;
    string direction = 2;
    uint64 price = 3;
    bool useMarketBasedPrice = 4;
    double marketPriceMargin = 5;
    uint64 amount = 6;
    uint64 minAmount = 7;
    double buyerSecurityDeposit = 8;
    string paymentAccountId = 9;
}

message PlaceOfferReply {
    bool result = 1;
}

///////////////////////////////////////////////////////////////////////////////////////////
// StopServer
///////////////////////////////////////////////////////////////////////////////////////////

service StopServer {
    rpc StopServer (StopServerRequest) returns (StopServerReply) {
    }
}

message StopServerRequest {
}

message StopServerReply {
}
